[package]
name = "impex"
version = "0.1.0"
edition = "2024"
readme = "../README.md"

[dependencies]
serde = { version = "1" }
impex_derive = { path = "../impex_derive", optional = true }


[features]
default = ["derive"]
derive = ["dep:impex_derive", "serde/derive"]

[dev-dependencies]
serde_json = "1"
